--- a/index.html
+++ b/index.html
@@ -2,39 +2,96 @@
 <html>
 
 <head>
-    <!--This is meta data.-->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!--This is a Google Font-->
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
-
-    <!--This is the Web Page Title.-->
-    <title>Dream Catch Videography</title>
+    <title> CSS Box Model</title>
 
     <!--This is Bootstrap CSS File.-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <!--This is my CSS file.-->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+        body {
+            background-color: rgb(0, 78, 78);
+        }
+
+        #box {
+            margin: 100px;
+            padding: 25px;
+            border: 5px solid rgb(51, 255, 0);
+            color: azure;
+            text-shadow: 2px 2px 5px black;
+            font-family: 'Lucida Sans';
+            font-size: xx-large;
+            font-weight: bold;
+            text-align: center;
+            background-color: rgb(0, 30, 95);
+        }
+
+        #topic {
+            color: rgb(172, 255, 255);
+            text-shadow: 2px 2px 5px black;
+            font-family: Georgia;
+            font-size: xx-large;
+            font-weight: bold;
+            text-align: center;
+            padding-top: 100px;
+            padding-bottom: 10px;
+        }
+
+        #sub-topic {
+            color: rgb(172, 255, 255);
+            text-shadow: 2px 2px 5px black;
+            font-family: Georgia;
+            font-size: large;
+            font-weight: bold;
+            font-style: italic;
+            text-align: center;
+        }
+
+        .btn {
+            font-family: serif;
+            font-weight: initial;
+            font-size: 115%;
+            border-radius: 200px;
+            text-transform: uppercase;
+            text-decoration: none;
+            margin-top: 50px;
+            margin-bottom: 50px;
+        }
+
+        .btn-primary {
+            background-color: rgb(209, 87, 0);
+            border-color: rgb(209, 87, 0);
+        }
+
+        .btn-primary:hover {
+            background-color: rgb(255, 146, 68);
+            border-color: rgb(255, 146, 68);
+        }
+
+        .btn-xl {
+            padding: 1rem 1rem;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container d-flex align-items-center h-100">
-        <div class="row">
-            <img class="logo" src="pics/logo_png.png">
-            <header class="text-center col-12">
-                <h1>Don't let your magical moments fade away.</h1>
-            </header>
-            <div class="buffer col-12"></div>
-            <section class="text-center col-12">
-                <div id="line"></div>
-                <br>
-                <a href="https://mailchi.mp/7eaae103cd2c/dream-catch-videography-subscribe-us">
-                <button class="btn btn-primary btn-xl">Subscribe Us</button>
-                </a>
-            </section>
+    <div id="topic">
+        Sample Websites
+    </div>
+    <div id="sub-topic">
+        By Saviska Jayawickrama
+    </div>
+    <div id="box">
+        <div class="btn btn-primary btn-xl">
+            <a href="Dream Catch Videography/index.html">
+                <button class="btn btn-primary btn-xl">Dream Catch Videograph</button>
+            </a>
+        </div>
+        <br>
+        <div class="btn btn-primary btn-xl">
+            <a href="My Custom Web Templates/index.html">
+                <button class="btn btn-primary btn-xl">Custom Webpage Template</button>
+            </a>
         </div>
     </div>
 </body>
