--- a/index.html
+++ b/index.html
@@ -2,98 +2,41 @@
 <html>
 
 <head>
-    <title> CSS Box Model</title>
-
-    <!--This is Bootstrap CSS File.-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <style>
-        body {
-            background-color: rgb(0, 78, 78);
-        }
-
-        #box {
-            margin: 100px;
-            padding: 25px;
-            border: 5px solid rgb(51, 255, 0);
-            color: azure;
-            text-shadow: 2px 2px 5px black;
-            font-family: 'Lucida Sans';
-            font-size: xx-large;
-            font-weight: bold;
-            text-align: center;
-            background-color: rgb(0, 30, 95);
-        }
-
-        #topic {
-            color: rgb(172, 255, 255);
-            text-shadow: 2px 2px 5px black;
-            font-family: Georgia;
-            font-size: xx-large;
-            font-weight: bold;
-            text-align: center;
-            padding-top: 100px;
-            padding-bottom: 10px;
-        }
-
-        #sub-topic {
-            color: rgb(172, 255, 255);
-            text-shadow: 2px 2px 5px black;
-            font-family: Georgia;
-            font-size: large;
-            font-weight: bold;
-            font-style: italic;
-            text-align: center;
-        }
-
-        .btn {
-            font-family: serif;
-            font-weight: initial;
-            font-size: 115%;
-            border-radius: 200px;
-            text-transform: uppercase;
-            text-decoration: none;
-            margin-top: 50px;
-            margin-bottom: 50px;
-        }
-
-        .btn-primary {
-            background-color: rgb(209, 87, 0);
-            border-color: rgb(209, 87, 0);
-        }
-
-        .btn-primary:hover {
-            background-color: rgb(255, 146, 68);
-            border-color: rgb(255, 146, 68);
-        }
-
-        .btn-xl {
-            padding: 1rem 1rem;
-        }
-    </style>
+    <title>Simple Interest Calculator</title>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="topic">
-        Sample Websites
-    </div>
-    <div id="sub-topic">
-        By Saviska Jayawickrama
-    </div>
-    <div id="box">
-        <div class="btn btn-primary btn-xl">
-            <a href="Dream Catch Videography/index.html">
-                <button class="btn btn-primary btn-xl">Dream Catch Videograph</button>
-            </a>
-        </div>
+    <div class="maindiv">
+        <h1>Simple Interest Calculator</h1>
         <br>
-        <div class="btn btn-primary btn-xl">
-            <a href="My Custom Web Templates/index.html">
-                <button class="btn btn-primary btn-xl">Custom Webpage Template</button>
-            </a>
-        </div>
+        Amount (LKR) : <input type="number" id="principal"> <br><br>
+        Rate : <input id="rate" type="range" min="1" max="20" value="10.25" step="0.25" onchange="updateRate()"> 
+        <span id="rate_val">
+            10.25
+        </span>%<br><br>
+        No. of Years : <input type="number" id="years" list="all_years">
+        <datalist id="all_years">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+        </datalist> <br><br>
+        Interest : <span id="result"></span><br><br><br>
+        <button onclick="compute()">Compute Interest</button>
+        <span id="result"></span>
     </div>
+    <br><br>
+    <footer>
+        © Saviska Jayawickrama - 2024
+    </footer>
 </body>
 
 </html>
