--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Marcellus&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
         rel="stylesheet">
-        
+
     <!-- Linking the css file -->
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -96,74 +96,80 @@
 
         <h3>Programming & Markup Languages That I Use...</h3>
 
-        <!-- Skills as Cards  -->
-        <div class="skills_cards">
-            <img src="resources/C_sharp_logo.png" alt="C# Logo" width="75px">
-            <h5>C#</h5>
-            <p>3 Years</p>
-        </div>
+        <div class="grid_container">
 
-        <div class="skills_cards">
-            <img src="resources/HTML5_logo.png" alt="HTML5 Logo" width="75px">
-            <h5>HTML5</h5>
-            <p>3 Years</p>
-        </div>
+            <!-- Skills as Cards  -->
+            <div class="skills_cards area">
+                <img src="resources/C_sharp_logo.png" alt="C# Logo" width="75px">
+                <h5>C#</h5>
+                <p>3 Years</p>
+            </div>
 
-        <div class="skills_cards">
-            <img src="resources/CSS3_logo.png" alt="CSS3 Logo" width="75px">
-            <h5>CSS3</h5>
-            <p>3 Years</p>
-        </div>
+            <div class="skills_cards area">
+                <img src="resources/HTML5_logo.png" alt="HTML5 Logo" width="75px">
+                <h5>HTML5</h5>
+                <p>3 Years</p>
+            </div>
 
-        <div class="skills_cards">
-            <img src="resources/javascript_logo.png" alt="JavaScript Logo" width="75px">
-            <h5>JavaScript</h5>
-            <p>6 Months</p>
-        </div>
+            <div class="skills_cards area">
+                <img src="resources/CSS3_logo.png" alt="CSS3 Logo" width="75px">
+                <h5>CSS3</h5>
+                <p>3 Years</p>
+            </div>
 
-        <div class="skills_cards">
-            <img src="resources/Python_logo.png" alt="Python Logo" width="75px">
-            <h5>Python</h5>
-            <p>3 Years</p>
-        </div>
+            <div class="skills_cards area">
+                <img src="resources/javascript_logo.png" alt="JavaScript Logo" width="75px">
+                <h5>JavaScript</h5>
+                <p>6 Months</p>
+            </div>
 
-        <div class="skills_cards">
-            <img src="resources/MsSQL_logo.png" alt="MS SQL Logo" width="75px">
-            <h5>SQL</h5>
-            <p>3 Years</p>
+            <div class="skills_cards area">
+                <img src="resources/Python_logo.png" alt="Python Logo" width="75px">
+                <h5>Python</h5>
+                <p>3 Years</p>
+            </div>
+
+            <div class="skills_cards area">
+                <img src="resources/MsSQL_logo.png" alt="MS SQL Logo" width="75px">
+                <h5>SQL</h5>
+                <p>3 Years</p>
+            </div>
         </div>
 
         <h3>IDEs and services That I Use...</h3>
 
-        <!-- Skills as Cards  -->
-        <div class="skills_cards">
-            <img src="resources/visual_studio_logo.png" alt="Visual Studio Logo" width="75px">
-            <h5>Visual Studio</h5>
-            <p>3 Years</p>
-        </div>
+        <div class="grid_container">
 
-        <div class="skills_cards">
-            <img src="resources/VS_code_logo.png" alt="VS Code Logo" width="75px">
-            <h5>Visual Studio Code</h5>
-            <p>1 Years</p>
-        </div>
+            <!-- Skills as Cards  -->
+            <div class="skills_cards area">
+                <img src="resources/visual_studio_logo.png" alt="Visual Studio Logo" width="75px">
+                <h5>Visual Studio</h5>
+                <p>3 Years</p>
+            </div>
 
-        <div class="skills_cards">
-            <img src="resources/Android_studio_logo.png" alt="Android Studio Logo" width="75px">
-            <h5>Android Studio</h5>
-            <p>1 Month</p>
-        </div>
+            <div class="skills_cards area">
+                <img src="resources/VS_code_logo.png" alt="VS Code Logo" width="75px">
+                <h5>Visual Studio Code</h5>
+                <p>1 Years</p>
+            </div>
 
-        <div class="skills_cards">
-            <img src="resources/GitHub_logo.png" alt="GitHub Logo" width="75px">
-            <h5>GitHub</h5>
-            <p>5 Months</p>
-        </div>
+            <div class="skills_cards area">
+                <img src="resources/Android_studio_logo.png" alt="Android Studio Logo" width="75px">
+                <h5>Android Studio</h5>
+                <p>1 Month</p>
+            </div>
 
-        <div class="skills_cards">
-            <img src="resources/Amazon_Web_Services_Logo.png" alt="Amazon Web Services Logo" width="75px">
-            <h5>Amazon Web Services</h5>
-            <p>2 Months</p>
+            <div class="skills_cards area">
+                <img src="resources/GitHub_logo.png" alt="GitHub Logo" width="75px">
+                <h5>GitHub</h5>
+                <p>5 Months</p>
+            </div>
+
+            <div class="skills_cards area">
+                <img src="resources/Amazon_Web_Services_Logo.png" alt="Amazon Web Services Logo" width="75px">
+                <h5>Amazon Web Services</h5>
+                <p>2 Months</p>
+            </div>
         </div>
 
     </section>
