projects Card updated

--- a/index.html
+++ b/index.html
@@ -178,56 +178,56 @@
     <section id="projects">
 
         <h2>My Projects...</h2>
-        <div style="clear:both;"></div>
+        <div class="poject_grid">
 
         <!-- projects as Cards -->
         <div class="projects_cards">
-            <h3>A Database Solution For Quiet Attic Films</h3>
+            <h3>A Database Solution For Quiet Attic Films Company</h3>
             <p>Design and implement a database system with GUI.</p>
             <p class="projects_languages">C# | SQL | Visual Studio</p>
             <h5>Completed</h5>
             <a href="https://github.com/Saviska-Jay/Database-Solution-for-Quiet-Attic-Films.git" target="_blank"><button
-                    class="projects_source_button">View Source Code</button></a>
+                    class="button-container projects_button source">View Source Code</button></a>
         </div>
 
         <div class="projects_cards">
-            <h3>Grifindo Toys Payroll System</h3>
+            <h3>A Payroll System for The Grifindo Toys Company</h3>
             <p>Design & Implement a GUI based system for a company called "The Grifindo Toys". They wanted a simple
                 payroll system to calculate the salaries of their employees.</p>
             <p class="projects_languages">C# | SQL | Visual Studio</p>
             <h5>Completed</h5>
             <a href="https://github.com/Saviska-Jay/Grifindo_Toys_Payroll_System.git" target="_blank"><button
-                    class="projects_source_button">View Source Code</button></a>
+                    class="button-container projects_button source">View Source Code</button></a>
         </div>
 
         <div class="projects_cards">
-            <h3> Grocery Store Management System</h3>
+            <h3>A Grocery Store Management System</h3>
             <p>A Grocery store management system with basic functionalities using C# .NET framework.</p>
             <p class="projects_languages">C# | SQL | Visual Studio</p>
-            <h5>In Development</h5>
+            <h5 class="in_development">In Development</h5>
             <a href="https://github.com/Saviska-Jay/Grocery-Store-Management-System-01.git" target="_blank"><button
-                    class="projects_source_button">View Source Code</button></a>
+                    class="button-container projects_button source">View Source Code</button></a>
         </div>
 
         <div class="projects_cards">
-            <h3>Simple Text Analyzer</h3>
+            <h3>A Simple Text Analyzer</h3>
             <p>A Simple Text Analyzer Program Built Using Python.</p>
             <p class="projects_languages">Python</p>
             <h5>Completed</h5>
             <a href="https://github.com/Saviska-Jay/Text-Analyzer-Python.git" target="_blank"><button
-                    class="projects_source_button">View Source Code</button></a>
+                    class="button-container projects_button source">View Source Code</button></a>
         </div>
 
         <div class="projects_cards">
-            <h3>Starter Web Page for Collecting Emails for Dream Catch Videography</h3>
+            <h3>A Starter Web Page for Collecting Emails for Dream Catch Videography</h3>
             <p>A subscription form to collect emails from users for a company called Dream Catch Videography. Also used
                 MailChimp as a third-party plugin.</p>
             <p class="projects_languages">HTML5 | CSS3 | Visual Studio Code</p>
             <h5>Completed</h5>
             <a href="https://saviska-jay.github.io/Dream%20Catch%20Videography/index.html" target="_blank"><button
-                    class="projects_view_button">Visit The Web Page</button></a>
+                    class="button-container projects_button view">Visit The Web Page</button></a>
             <a href="https://github.com/Saviska-Jay/Saviska-Jay.github.io/tree/main/Dream%20Catch%20Videography"
-                target="_blank"><button class="projects_source_button">View Source Code</button></a>
+                target="_blank"><button class="button-container projects_button source">View Source Code</button></a>
         </div>
 
         <div class="projects_cards">
@@ -236,9 +236,9 @@
             <p class="projects_languages">HTML5 | CSS3 | Visual Studio Code</p>
             <h5>Completed</h5>
             <a href="https://saviska-jay.github.io/My%20Custom%20Web%20Templates/index.html" target="_blank"><button
-                    class="projects_view_button">Visit The Web Page</button></a>
+                    class="button-container projects_button view">Visit The Web Page</button></a>
             <a href="https://github.com/Saviska-Jay/Saviska-Jay.github.io/tree/main/My%20Custom%20Web%20Templates"
-                target="_blank"><button class="projects_source_button">View Source Code</button></a>
+                target="_blank"><button class="button-container projects_button source">View Source Code</button></a>
         </div>
 
         <div class="projects_cards">
@@ -246,11 +246,12 @@
             <p> A website that showcases my qualifications and work samples.</p>
             <p class="projects_languages">HTML5 | CSS3 |Visual Studio Code</p>
             <h5>Completed</h5>
-            <a href="https://saviska-jay.github.io/" target="_blank"><button class="projects_view_button">Visit The Web
+            <a href="https://saviska-jay.github.io/" target="_blank"><button class="button-container projects_button view">Visit The Web
                     Page</button></a>
-            <a href="https://github.com/Saviska-Jay" target="_blank"><button class="projects_source_button">View Source
+            <a href="https://github.com/Saviska-Jay" target="_blank"><button class="button-container projects_button source">View Source
                     Code</button></a>
         </div>
+    </div>
 
     </section>
 
