--- a/index.html
+++ b/index.html
@@ -180,78 +180,84 @@
         <h2>My Projects...</h2>
         <div class="poject_grid">
 
-        <!-- projects as Cards -->
-        <div class="projects_cards">
-            <h3>A Database Solution For Quiet Attic Films Company</h3>
-            <p>Design and implement a database system with GUI.</p>
-            <p class="projects_languages">C# | SQL | Visual Studio</p>
-            <h5>Completed</h5>
-            <a href="https://github.com/Saviska-Jay/Database-Solution-for-Quiet-Attic-Films.git" target="_blank"><button
-                    class="button-container projects_button source">View Source Code</button></a>
-        </div>
+            <!-- projects as Cards -->
+            <div class="projects_cards">
+                <h3>A Database Solution For Quiet Attic Films Company</h3>
+                <p>Design and implement a database system with GUI.</p>
+                <p class="projects_languages">C# | SQL | Visual Studio</p>
+                <h5>Completed</h5>
+                <a href="https://github.com/Saviska-Jay/Database-Solution-for-Quiet-Attic-Films.git"
+                    target="_blank"><button class="button-container projects_button source">View Source
+                        Code</button></a>
+            </div>
 
-        <div class="projects_cards">
-            <h3>A Payroll System for The Grifindo Toys Company</h3>
-            <p>Design & Implement a GUI based system for a company called "The Grifindo Toys". They wanted a simple
-                payroll system to calculate the salaries of their employees.</p>
-            <p class="projects_languages">C# | SQL | Visual Studio</p>
-            <h5>Completed</h5>
-            <a href="https://github.com/Saviska-Jay/Grifindo_Toys_Payroll_System.git" target="_blank"><button
-                    class="button-container projects_button source">View Source Code</button></a>
-        </div>
+            <div class="projects_cards">
+                <h3>A Payroll System for The Grifindo Toys Company</h3>
+                <p>Design & Implement a GUI based system for a company called "The Grifindo Toys". They wanted a simple
+                    payroll system to calculate the salaries of their employees.</p>
+                <p class="projects_languages">C# | SQL | Visual Studio</p>
+                <h5>Completed</h5>
+                <a href="https://github.com/Saviska-Jay/Grifindo_Toys_Payroll_System.git" target="_blank"><button
+                        class="button-container projects_button source">View Source Code</button></a>
+            </div>
 
-        <div class="projects_cards">
-            <h3>A Grocery Store Management System</h3>
-            <p>A Grocery store management system with basic functionalities using C# .NET framework.</p>
-            <p class="projects_languages">C# | SQL | Visual Studio</p>
-            <h5 class="in_development">In Development</h5>
-            <a href="https://github.com/Saviska-Jay/Grocery-Store-Management-System-01.git" target="_blank"><button
-                    class="button-container projects_button source">View Source Code</button></a>
-        </div>
+            <div class="projects_cards">
+                <h3>A Grocery Store Management System</h3>
+                <p>A Grocery store management system with basic functionalities using C# .NET framework.</p>
+                <p class="projects_languages">C# | SQL | Visual Studio</p>
+                <h5 class="in_development">In Development</h5>
+                <a href="https://github.com/Saviska-Jay/Grocery-Store-Management-System-01.git" target="_blank"><button
+                        class="button-container projects_button source">View Source Code</button></a>
+            </div>
 
-        <div class="projects_cards">
-            <h3>A Simple Text Analyzer</h3>
-            <p>A Simple Text Analyzer Program Built Using Python.</p>
-            <p class="projects_languages">Python</p>
-            <h5>Completed</h5>
-            <a href="https://github.com/Saviska-Jay/Text-Analyzer-Python.git" target="_blank"><button
-                    class="button-container projects_button source">View Source Code</button></a>
-        </div>
+            <div class="projects_cards">
+                <h3>A Simple Text Analyzer</h3>
+                <p>A Simple Text Analyzer Program Built Using Python.</p>
+                <p class="projects_languages">Python</p>
+                <h5>Completed</h5>
+                <a href="https://github.com/Saviska-Jay/Text-Analyzer-Python.git" target="_blank"><button
+                        class="button-container projects_button source">View Source Code</button></a>
+            </div>
 
-        <div class="projects_cards">
-            <h3>A Starter Web Page for Collecting Emails for Dream Catch Videography</h3>
-            <p>A subscription form to collect emails from users for a company called Dream Catch Videography. Also used
-                MailChimp as a third-party plugin.</p>
-            <p class="projects_languages">HTML5 | CSS3 | Visual Studio Code</p>
-            <h5>Completed</h5>
-            <a href="https://saviska-jay.github.io/Dream%20Catch%20Videography/index.html" target="_blank"><button
-                    class="button-container projects_button view">Visit The Web Page</button></a>
-            <a href="https://github.com/Saviska-Jay/Saviska-Jay.github.io/tree/main/Dream%20Catch%20Videography"
-                target="_blank"><button class="button-container projects_button source">View Source Code</button></a>
-        </div>
+            <div class="projects_cards">
+                <h3>A Starter Web Page for Collecting Emails for Dream Catch Videography</h3>
+                <p>A subscription form to collect emails from users for a company called Dream Catch Videography. Also
+                    used
+                    MailChimp as a third-party plugin.</p>
+                <p class="projects_languages">HTML5 | CSS3 | Visual Studio Code</p>
+                <h5>Completed</h5>
+                <a href="https://saviska-jay.github.io/Dream%20Catch%20Videography/index.html" target="_blank"><button
+                        class="button-container projects_button view">Visit The Web Page</button></a>
+                <a href="https://github.com/Saviska-Jay/Saviska-Jay.github.io/tree/main/Dream%20Catch%20Videography"
+                    target="_blank"><button class="button-container projects_button source">View Source
+                        Code</button></a>
+            </div>
 
-        <div class="projects_cards">
-            <h3>A customizable responsive web template</h3>
-            <p>A simple, customizable, responsive web template for future use.</p>
-            <p class="projects_languages">HTML5 | CSS3 | Visual Studio Code</p>
-            <h5>Completed</h5>
-            <a href="https://saviska-jay.github.io/My%20Custom%20Web%20Templates/index.html" target="_blank"><button
-                    class="button-container projects_button view">Visit The Web Page</button></a>
-            <a href="https://github.com/Saviska-Jay/Saviska-Jay.github.io/tree/main/My%20Custom%20Web%20Templates"
-                target="_blank"><button class="button-container projects_button source">View Source Code</button></a>
-        </div>
+            <div class="projects_cards">
+                <h3>A customizable responsive web template</h3>
+                <p>A simple, customizable, responsive web template for future use.</p>
+                <p class="projects_languages">HTML5 | CSS3 | Visual Studio Code</p>
+                <h5>Completed</h5>
+                <a href="https://saviska-jay.github.io/My%20Custom%20Web%20Templates/index.html" target="_blank"><button
+                        class="button-container projects_button view">Visit The Web Page</button></a>
+                <a href="https://github.com/Saviska-Jay/Saviska-Jay.github.io/tree/main/My%20Custom%20Web%20Templates"
+                    target="_blank"><button class="button-container projects_button source">View Source
+                        Code</button></a>
+            </div>
 
-        <div class="projects_cards">
-            <h3>A portfolio website </h3>
-            <p> A website that showcases my qualifications and work samples.</p>
-            <p class="projects_languages">HTML5 | CSS3 |Visual Studio Code</p>
-            <h5>Completed</h5>
-            <a href="https://saviska-jay.github.io/" target="_blank"><button class="button-container projects_button view">Visit The Web
-                    Page</button></a>
-            <a href="https://github.com/Saviska-Jay" target="_blank"><button class="button-container projects_button source">View Source
-                    Code</button></a>
+            <div class="projects_cards">
+                <h3>A portfolio website </h3>
+                <p> A website that showcases my qualifications and work samples.</p>
+                <p class="projects_languages">HTML5 | CSS3 |Visual Studio Code</p>
+                <h5 class="in_development">In Development</h5>
+                <a href="https://saviska-jay.github.io/" target="_blank"><button
+                        class="button-container projects_button view">Visit The Web
+                        Page</button></a>
+                <a href="https://github.com/Saviska-Jay" target="_blank"><button
+                        class="button-container projects_button source">View Source
+                        Code</button></a>
+            </div>
         </div>
-    </div>
 
     </section>
 
@@ -261,23 +267,44 @@
         <h2>Recommendations...</h2>
         <div style="clear:both;"></div>
 
-        <!-- Recommendations as cards. -->
-        <div class="recommendations_card">
-            <p class="recommendations_text"><span>“ </span>Sample Recommendations Sample Recommendations Sample
-                Recommendations Sample
-                Recommendations Sample Recommendations Sample Recommendations Sample Recommendations Sample
-                Recommendations Sample Recommendations Sample Recommendations Sample Recommendations Sample<span>
-                    ”</span></p>
-            <p class="recommendations_by">~Someone</p>
-        </div>
+        <div class="recommendations_grid">
 
-        <div class="recommendations_card">
-            <p class="recommendations_text"><span>“ </span>Sample Recommendations Sample Recommendations Sample
-                Recommendations Sample
-                Recommendations Sample Recommendations Sample Recommendations Sample Recommendations Sample
-                Recommendations Sample Recommendations Sample Recommendations Sample Recommendations Sample<span>
-                    ”</span></p>
-            <p class="recommendations_by">~Someone</p>
+            <!-- Recommendations as cards. -->
+            <div class="recommendations_card">
+                <p class="recommendations_text"><span>“ </span>Sample Recommendations Sample Recommendations Sample
+                    Recommendations Sample
+                    Recommendations Sample Recommendations Sample Recommendations Sample Recommendations Sample
+                    Recommendations Sample Recommendations Sample Recommendations Sample Recommendations Sample<span>
+                        ”</span></p>
+                <p class="recommendations_by">~Someone</p>
+            </div>
+
+            <div class="recommendations_card">
+                <p class="recommendations_text"><span>“ </span>Sample Recommendations Sample Recommendations Sample
+                    Recommendations Sample
+                    Recommendations Sample Recommendations Sample Recommendations Sample Recommendations Sample
+                    Recommendations Sample Recommendations Sample Recommendations Sample Recommendations Sample<span>
+                        ”</span></p>
+                <p class="recommendations_by">~Someone</p>
+            </div>
+
+            <div class="recommendations_card">
+                <p class="recommendations_text"><span>“ </span>Sample Recommendations Sample Recommendations Sample
+                    Recommendations Sample
+                    Recommendations Sample Recommendations Sample Recommendations Sample Recommendations Sample
+                    Recommendations Sample Recommendations Sample Recommendations Sample Recommendations Sample<span>
+                        ”</span></p>
+                <p class="recommendations_by">~Someone</p>
+            </div>
+
+            <div class="recommendations_card">
+                <p class="recommendations_text"><span>“ </span>Sample Recommendations Sample Recommendations Sample
+                    Recommendations Sample
+                    Recommendations Sample Recommendations Sample Recommendations Sample Recommendations Sample
+                    Recommendations Sample Recommendations Sample Recommendations Sample Recommendations Sample<span>
+                        ”</span></p>
+                <p class="recommendations_by">~Someone</p>
+            </div>
         </div>
 
     </section>
@@ -286,15 +313,15 @@
     <section class="social_media">
 
         <h2>Connect with me via...</h2>
-        <div style="clear:both;"></div>
 
-        <a href="https://github.com/Saviska-Jay" target="_blank"><img src="resources/GitHub_logo.png" alt="GitHub Logo"
-                width="90px"></a>
-        <a href="https://www.linkedin.com/in/saviska-jayawickrama/" target="_blank"><img
-                src="resources/linkedIn_logo.png" alt="LinkedIn" width="90px"></a>
-        <a href="https://www.instagram.com/saviska.jay/" target="_blank"><img src="resources/instagram_logo.png"
-                alt="Instagram Logo" width="90px"></a>
-
+        <div class="all_social_icon">
+            <a href="https://github.com/Saviska-Jay" target="_blank"><img src="resources/GitHub_logo.png" class="social_icon" 
+                    alt="GitHub Logo"  ></a>
+            <a href="https://www.linkedin.com/in/saviska-jayawickrama/" target="_blank"><img
+                    src="resources/linkedIn_logo.png" alt="LinkedIn"   class="social_icon"></a>
+            <a href="https://www.instagram.com/saviska.jay/" target="_blank"><img src="resources/instagram_logo.png"
+                    alt="Instagram Logo"   class="social_icon"></a>
+        </div>
     </section>
 
     <div>
@@ -307,7 +334,7 @@
     <footer>
         <p class="footer_text">
             © Saviska Jayawickrama - 2024
-            <br>
+            <br><br>
             Made with ❤️
         </p>
     </footer>
