Desktop version Completed

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <!-- Page Icon. -->
-    <link rel="icon" type="image/png" href="resources/heart_icon.png">
-
+    <link rel="icon" type="image/png" href="https://static-00.iconduck.com/assets.00/smiling-face-with-sunglasses-emoji-512x512-wv7w52bv.png">
 </head>
 
 <body>
