The portfolio website Completed.

--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
             <div class="projects_cards">
                 <h3>A portfolio website </h3>
                 <p> A website that showcases my qualifications and work samples.</p>
-                <p class="projects_languages">HTML5 | CSS3 |Visual Studio Code</p>
-                <h5 class="in_development">In Development</h5>
+                <p class="projects_languages">HTML5 | CSS3 | javaScript | Visual Studio Code</p>
+                <h5>Completed</h5>
                 <a href="https://saviska-jay.github.io/" target="_blank"><button
                         class="button-container projects_button view">Visit The Web
                         Page</button></a>
