Create the HTML Navigation Bar

--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <!-- This is the Web Page Title  -->
+    <title>Malcolm Lismore Photography</title>
+
+    <!-- Linking With the CSS File  -->
+    <link rel="stylesheet" type="text/css" href="style-home-pg.css">
+
 </head>
+
 <body>
-    
+    <header>
+
+        <!-- This is The Navigation Bar -->
+        <div class="navigation-bar">
+            <nav>
+                <a href="" class="navigation-bar-items">Home</a>
+                <a href="" class="navigation-bar-items">Home</a>
+                <a href="" class="navigation-bar-items">Home</a>
+                <a href="" class="navigation-bar-items">Home</a>
+                <a href="" class="navigation-bar-items">Home</a>
+            </nav>
+
+        </div>
+    </header>
 </body>
+
 </html>
