Update the Navigation Bar

--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -19,10 +19,10 @@
         <div class="navigation-bar">
             <nav>
                 <a href="" class="navigation-bar-items">Home</a>
-                <a href="" class="navigation-bar-items">Home</a>
-                <a href="" class="navigation-bar-items">Home</a>
-                <a href="" class="navigation-bar-items">Home</a>
-                <a href="" class="navigation-bar-items">Home</a>
+                <a href="" class="navigation-bar-items">About Me</a>
+                <a href="" class="navigation-bar-items">Gallery</a>
+                <a href="" class="navigation-bar-items">Packages & Prices</a>
+                <a href="" class="navigation-bar-items">Contact Me</a>
             </nav>
 
         </div>
