Added the page head

--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -24,9 +24,23 @@
                 <a href="" class="navigation-bar-items">Packages & Prices</a>
                 <a href="" class="navigation-bar-items">Contact Me</a>
             </nav>
-
         </div>
+
+        <!-- This is the page Head  -->
+        <div class="page-head">
+            <h1>Malcolm Lismore Photography</h1>
+            <p id="motto">Capturing Emotions Through the Lens...</p>
+            <img src="resources/cam-lens-bg-pic.jpg" alt="Camera Lens Background Photo" width="50%">
+        </div>
+
     </header>
+
+    <!-- This is the Gallery preview section  -->
+    <section>
+
+    </section>
+
+
 </body>
 
 </html>
