Entered the Gallery preview section, its js code, and About Me Preview Section

--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -7,7 +7,7 @@
     <!-- This is the Web Page Title  -->
     <title>Malcolm Lismore Photography</title>
 
-    <!-- Linking With the CSS File  -->
+    <!-- Linking With the Local CSS File  -->
     <link rel="stylesheet" type="text/css" href="style-home-pg.css">
 
 </head>
@@ -36,11 +36,66 @@
     </header>
 
     <!-- This is the Gallery preview section  -->
-    <section>
+    <section class="gallery-preview-section">
+
+        <!-- Section Title  -->
+        <h2>Golden Captures</h2>
+
+        <!-- Photos as Cards  -->
+        <div class="gallery-cards-area">
+
+            <div class="gallery-card">
+                <img class="gallery-preview-slideshow1 animate-fading" src="" alt="Image 1.1">
+                <img class="gallery-preview-slideshow1 animate-fading" src="" alt="Image 1.2">
+                <img class="gallery-preview-slideshow1 animate-fading" src="" alt="Image 1.3">
+                <p class="gallery-card-info">text text text</p>
+            </div>
+
+            <div class="gallery-card">
+                <img class="gallery-preview-slideshow2 animate-fading" src="" alt="Image 2.1">
+                <img class="gallery-preview-slideshow2 animate-fading" src="" alt="Image 2.2">
+                <img class="gallery-preview-slideshow2 animate-fading" src="" alt="Image 2.3">
+                <p class="gallery-card-info">text text text</p>
+            </div>
+
+            <div class="gallery-card">
+                <img class="gallery-preview-slideshow3 animate-fading" src="" alt="Image 3.1">
+                <img class="gallery-preview-slideshow3 animate-fading" src="" alt="Image 3.2">
+                <img class="gallery-preview-slideshow3 animate-fading" src="" alt="Image 3.3">
+                <p class="gallery-card-info">text text text</p>
+            </div>
+
+        </div>
+
+        <!-- view more in gallery button  -->
+        <a href=""><button class="my-button view-more-in-gallery-button">View More in Gallery</button></a>
 
     </section>
 
+    <!-- About Me Preview Section  -->
+    <section class="about-me-preview">
 
+        <div class="about-me-preview-area">
+            <img src="" alt="Malcolm Lismore Profile Pic">
+            <div class="about-me-preview-info-with-button">
+
+                <p class="about-me-preview-info">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor
+                    rhoncus nunc a mattis. Suspendisse maximus nisi sit amet sapien imperdiet auctor. Sed eget diam
+                    euismod nibh pharetra elementum. Sed eget lorem urna. Nulla viverra eros porta lacus ultricies
+                    mattis. Fusce nec ante in augue tempus hendrerit. Donec at eros nec urna fringilla ullamcorper eget
+                    vel magna. Integer sit amet nulla quis enim vehicula pellentesque.
+                </p>
+
+                <!-- Read more about me button  -->
+                <a href=""><button class="my-button read-more-about-me-button">Read More About Me</button></a>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- Linking With the JavaScript File  -->
+    <script src="script-home-pg.js">Lorem</script>
 </body>
 
 </html>
