Added the Packages & Prices Section

--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -75,6 +75,9 @@
     <!-- About Me Preview Section  -->
     <section class="about-me-preview">
 
+        <!-- Section Title  -->
+        <h2>About Me</h2>
+
         <div class="about-me-preview-area">
             <img src="" alt="Malcolm Lismore Profile Pic">
             <div class="about-me-preview-info-with-button">
@@ -91,6 +94,51 @@
                 <a href=""><button class="my-button read-more-about-me-button">Read More About Me</button></a>
 
             </div>
+        </div>
+    </section>
+
+    <!-- Packages & Prices Section  -->
+    <section class="packages-prices-preview">
+
+        <!-- Section Title  -->
+        <h2>Packages & Prices</h2>
+
+        <div class="packages-prices-preview-cards-area">
+
+            <!-- Packages as Cards  -->
+            <div class="packages-prices-card">
+                <h3 class="package-name">Package Name</h3>
+                <h4 class="package-price">50 $</h4>
+                <p class="package-info">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor
+                    rhoncus nunc a mattis. Suspendisse maximus nisi sit amet sapien imperdiet auctor.
+                </p>
+                <a href=""><button class="my-button select-package-button">Select</button></a>
+            </div>
+
+            <div class="packages-prices-card">
+                <h3 class="package-name">Package Name</h3>
+                <h4 class="package-price">50 $</h4>
+                <p class="package-info">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor
+                    rhoncus nunc a mattis. Suspendisse maximus nisi sit amet sapien imperdiet auctor.
+                </p>
+                <a href=""><button class="my-button select-package-button">Select</button></a>
+            </div>
+
+            <div class="packages-prices-card">
+                <h3 class="package-name">Package Name</h3>
+                <h4 class="package-price">50 $</h4>
+                <p class="package-info">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor
+                    rhoncus nunc a mattis. Suspendisse maximus nisi sit amet sapien imperdiet auctor.
+                </p>
+                <a href=""><button class="my-button select-package-button">Select</button></a>
+            </div>
+
+            <!-- Browse more Packages button  -->
+            <a href=""><button class="my-button more-packages-button">More Packages</button></a>
+            
         </div>
     </section>
 
