Added the Subscribe Section

--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -138,8 +138,26 @@
 
             <!-- Browse more Packages button  -->
             <a href=""><button class="my-button more-packages-button">More Packages</button></a>
-            
+
         </div>
+    </section>
+
+    <!-- Subscribe Section  -->
+    <section class="subscribe-section">
+
+        <!-- Section Title  -->
+        <h2>Subscribe for Updates</h2>
+        <p class="subscribe-info">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor
+            rhoncus nunc a mattis. Suspendisse maximus nisi sit amet sapien imperdiet auctor.
+        </p>
+
+        <!-- Subscribe Form  -->
+        <form>
+            <input required class="sub-email-input" type="email" id="sub-email">
+            <button type="submit" class="my-button sub-button" id="sub-button">Subscribe</button>
+        </form>
+
     </section>
 
     <!-- Linking With the JavaScript File  -->
