added the footer

--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -160,6 +160,11 @@
 
     </section>
 
+    <footer>
+        <p class="footer-text">© Malcolm Lismore - 2024</p>
+        <p class="footer-text">Developed By Saviska Jayawickrama</p>
+    </footer>
+
     <!-- Linking With the JavaScript File  -->
     <script src="script-home-pg.js">Lorem</script>
 </body>
