--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -7,6 +7,15 @@
     <!-- This is the Web Page Title  -->
     <title>Malcolm Lismore Photography</title>
 
+    <!-- Linking With Google Fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+
     <!-- Linking With the Local CSS File  -->
     <link rel="stylesheet" type="text/css" href="style-home-pg.css">
 
@@ -14,6 +23,9 @@
 
 <body>
     <header>
+
+        <!-- This is the Logo  -->
+        <img class="page-logo-img" src="resources/logo-black.png" alt="Malcolm Lismore Photography Logo" width="15%">
 
         <!-- This is The Navigation Bar -->
         <div class="navigation-bar">
